# MiniHeatSolver

./: CMakeLists.txt  README.md  bench.cpp  main.cpp  solver.cpp  solver.h
